--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div class="text-1">Hello &#128075;, my name is</div>
                 <div class="text-2">Ayush Kumar</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
-                <a href="#">Hire me</a>
+                <!-- <a href="#">Hire me</a> -->
             </div>
         </div>
     </section>
@@ -78,7 +78,7 @@
                         technologies like HTML, CSS, JavaScript and Bootstrap. I'm also well-versed in design tools such
                         as Figma and Canva 💡.</P>
                     </p>
-                    <a href="#">Download CV</a>
+                    <a href="https://drive.google.com/file/d/1OKD_Al4wzkXUcDpfIGKCxzO-QK8X19Z-/view?usp=drive_link">Download CV</a>
                 </div>
             </div>
         </div>
