--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Created By CodingNepal -->
+
 <html lang="en">
 
 <head>
@@ -189,28 +189,34 @@
                 <div class="card">
                     <div class="box">
                         <!-- <i class="fas fa-paint-brush"></i> -->
-                        <img class="project-img" src="projects/Typingtest.png" alt="">
-                        <div class="text">Typing speed calculator</div>
+                        <!-- <img class="project-img" src="projects/Typingtest.png" alt=""> -->
+                        <img class="project-img" src="projects/newsapp.jpg" alt="">
+
+                        <div class="text">TrendsAffair</div>
                         <p>Developed a dynamic and user-friendly typing speed calculator website using HTML, CSS, and JavaScript. This project provides users with an intuitive
                             interface to test and improve their typing speed. Features include real-time speed calculation,
                             accuracy measurement, and customizable time trials. </p>
-                            <button class="visit-btn"> <a href="https://ayushrskiaa.github.io/TypingTest/" target="_blank">Visit link</a></button>
+                            <button class="visit-btn"> <a href="https://github.com/ayushrskiaa/TrendsAffair" target="_blank">Visit link</a></button>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <!-- <i class="fas fa-chart-line"></i> -->
-                        <img src="projects/tik-tak-toe.png" alt="" class="project-img">
-                        <div class="text">Tic-Tac-Toe Game</div>
+                        <img src="projects/wordcount.png" alt="" class="project-img">
+                        <div class="text">Word-Count</div>
+                        <p></p>
                         <!-- <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p> -->
-                        <button class="visit-btn"> <a href="https://ayushrskiaa.github.io/Tik-Tak-Toe/" target="_blank">Visit link</a></button>
+                        <button class="visit-btn"> <a href="https://github.com/ayushrskiaa/CountWords" target="_blank">Visit link</a></button>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <i class="fas fa-code"></i>
-                        <div class="text">Will be added soon..</div>
-                        <!-- <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p> -->
+                        <!-- <i class="fas fa-code"></i> -->
+                         <img src="projects/hand-detection.webp" alt="" class="project-img">
+                        <div class="text">Hand-Detection</div>
+                        <button class="visit-btn"> <a href="https://github.com/ayushrskiaa/Left-Right-Hand-Detection-System-" target="_blank">Visit link</a></button>
+
+                        <!-- <p>Lorem ipsuandm dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p> -->
                     </div>
                 </div>
 
