--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         technologies like HTML, CSS, JavaScript and Bootstrap. I'm also well-versed in design tools such
                         as Figma and Canva 💡.</P>
                     </p>
-                    <a href="https://drive.google.com/file/d/1OKD_Al4wzkXUcDpfIGKCxzO-QK8X19Z-/view?usp=drive_link" target="_blank">Download CV</a>
+                    <a href="https://drive.google.com/file/d/1-hs3C4dlJ9v5EV54qTzdIjF0He6fC2JW/view?usp=sharing" target="_blank">Download Resume</a>
                 </div>
             </div>
         </div>
@@ -193,9 +193,10 @@
                         <img class="project-img" src="projects/newsapp.jpg" alt="">
 
                         <div class="text">TrendsAffair</div>
-                        <p>Developed a dynamic and user-friendly typing speed calculator website using HTML, CSS, and JavaScript. This project provides users with an intuitive
-                            interface to test and improve their typing speed. Features include real-time speed calculation,
-                            accuracy measurement, and customizable time trials. </p>
+                        <p>TrendsAffair is a dynamic and responsive news website built using React that delivers real-time updates
+                            by integrating a reliable news API. It provides users with a seamless browsing experience by efficiently
+                            fetching and displaying the latest news across various categories.
+                             </p>
                             <button class="visit-btn"> <a href="https://github.com/ayushrskiaa/TrendsAffair" target="_blank">Visit link</a></button>
                     </div>
                 </div>
@@ -204,7 +205,9 @@
                         <!-- <i class="fas fa-chart-line"></i> -->
                         <img src="projects/wordcount.png" alt="" class="project-img">
                         <div class="text">Word-Count</div>
-                        <p></p>
+                        <p>WordsCount is a React-based web application designed to enhance productivity by providing a suite of
+                            text manipulation tools for both casual users and professionals. The app offers an intuitive and responsive
+                            interface, making text editing and analysis effortless.</p>
                         <!-- <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p> -->
                         <button class="visit-btn"> <a href="https://github.com/ayushrskiaa/CountWords" target="_blank">Visit link</a></button>
                     </div>
@@ -214,6 +217,9 @@
                         <!-- <i class="fas fa-code"></i> -->
                          <img src="projects/hand-detection.webp" alt="" class="project-img">
                         <div class="text">Hand-Detection</div>
+                        <p>Built a real-time hand detection system with OpenCV and MediaPipe, classifying hands as left or right
+                            and displaying labels on the video feed.
+                            </p>
                         <button class="visit-btn"> <a href="https://github.com/ayushrskiaa/Left-Right-Hand-Detection-System-" target="_blank">Visit link</a></button>
 
                         <!-- <p>Lorem ipsuandm dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p> -->
